--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -4,21 +4,18 @@ security:
     Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: "auto"
   # https://symfony.com/doc/current/security.html#loading-the-user-the-user-provider
   providers:
-    users_in_memory:
-      memory:
-        users:
-          admin:
-            password: "$2y$13$GgKpAXhDrAT7tAd2Q.h6W.chUrBfcy4GomkaL7ynGbe6XYkmMDm8a"
-            roles:
-              - "ROLE_ADMIN"
-              - "ROLE_USER"
+    # used to reload user from session & other features (e.g. switch_user)
+    app_user_provider:
+      entity:
+        class: App\Entity\User
+        property: username
   firewalls:
     dev:
       pattern: ^/(_(profiler|wdt)|css|images|js)/
       security: false
     main:
       lazy: true
-      provider: users_in_memory
+      provider: app_user_provider
       http_basic:
         realm: "My Secured Area"
 
