Update security configuration for login form and paths

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -16,8 +16,9 @@ security:
     main:
       lazy: true
       provider: app_user_provider
-      http_basic:
-        realm: "My Secured Area"
+      form_login:
+        login_path: app_login
+        check_path: app_login
 
       # activate different ways to authenticate
       # https://symfony.com/doc/current/security.html#the-firewall
