--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -19,6 +19,8 @@ security:
       form_login:
         login_path: app_login
         check_path: app_login
+      logout:
+        path: app_logout
 
       # activate different ways to authenticate
       # https://symfony.com/doc/current/security.html#the-firewall
@@ -30,6 +32,21 @@ security:
   # Note: Only the *first* access control that matches will be used
   access_control:
     - { path: ^/, roles: PUBLIC_ACCESS }
+
+  role_hierarchy:
+    ROLE_ADMIN: 
+      - ROLE_USER
+      - ROLE_LOCATION_EDIT
+      - ROLE_LOCATION_DELETE
+      - ROLE_LOCATION_NEW
+      - ROLE_MEASUREMENT_EDIT
+      - ROLE_MEASUREMENT_DELETE
+      - ROLE_MEASUREMENT_NEW
+    ROLE_USER:
+      - ROLE_LOCATION_INDEX
+      - ROLE_LOCATION_SHOW
+      - ROLE_MEASUREMENT_INDEX
+      - ROLE_MEASUREMENT_SHOW
 
 when@test:
   security:
